# TajsGraphBM

./: .clangd  .gitignore  .luarc.json  AGENTS.md  CMakeLists.txt  CMakePresets.json  Engine.ini  README.md  build_cppui.ps1  build_native.ps1  user_config.lua
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: auto-category-labels.yml  labels-sync.yml  lua-smoke-check.yml
Native/: CMakeLists.txt  README.md
Native/src/: console_bridge.cpp  console_bridge.hpp  mod_entry.cpp  tajsgraph_mod.cpp  tajsgraph_mod.hpp  ui_state.hpp  umg_bridge.cpp  umg_bridge.hpp
Scripts/: config.lua  config_store.lua  main.lua  prepatch.txt  rt_coordinator.lua  rt_log.lua  rt_object.lua  rt_render.lua  rt_scheduler.lua  rt_spotlight.lua  rt_state.lua  rt_stats.lua  runtime.lua  tg_autocomplete.lua  tg_config.lua  tg_fog.lua  tg_lights.lua  tg_mesh.lua  tg_skylight.lua  tg_state.lua  tg_utils.lua
docs/: KNOWN_GOOD_VERSIONS.md  MANUAL_TEST_CHECKLIST.md
luastubs/: stubs.lua
